--- a/arithmetic_practice/index2.html
+++ b/arithmetic_practice/index2.html
@@ -16,58 +16,76 @@
             margin: 0;
             overflow: hidden;
         }
-        #controls {
+        #controls, #info {
             position: absolute;
             top: 20px;
-            left: 20px;
             background: #fff;
             padding: 15px;
             border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             font-size: 16px;
+        }
+        #controls {
+            left: 20px;
+        }
+        #info {
+            right: 20px;
+            text-align: right;
+            width: 200px;
         }
         #controls label {
             display: block;
             margin-bottom: 10px;
         }
         #controls input, #controls select {
-            width: 80px;
+            width: 60px;
             padding: 5px;
             margin-top: 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 14px;
+            display: inline-block;
         }
-        #controls input[type=checkbox] {
+        #controls input[type=checkbox], #controls input[type=button] {
             width: auto;
         }
-        #info {
+        #progress-container {
             position: absolute;
             top: 20px;
-            right: 20px;
-            text-align: right;
-            background: #fff;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 200px;
-            font-size: 16px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            max-width: 600px;
+            height: 30px;
+            background-color: #ddd;
+            border-radius: 15px;
+            overflow: hidden;
         }
-        #info div {
-            margin-bottom: 10px;
+        #progress-bar {
+            height: 100%;
+            width: 100%;
+            background-color: #4caf50;
+            border-radius: 15px;
+            transition: width 1s linear;
         }
-        #timer span {
+        #cpm-display {
+            position: absolute;
+            top: 60px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 24px;
             font-weight: bold;
+            color: #333;
         }
         #question-area {
             text-align: center;
             font-size: 48px;
             color: #333;
             transition: background-color 0.2s;
-            background-color: #ddd; /* Grey shade before start */
+            background-color: #ddd;
             padding: 20px;
             border-radius: 10px;
-            width: 600px; /* Fixed width for consistency */
+            width: 600px;
             font-family: 'Courier New', monospace;
         }
         #question-area.started {
@@ -84,20 +102,16 @@
             margin-bottom: 20px;
             font-family: 'Courier New', monospace;
         }
-        #answer::-webkit-outer-spin-button,
-        #answer::-webkit-inner-spin-button,
-        #minRange::-webkit-outer-spin-button,
-        #minRange::-webkit-inner-spin-button,
-        #maxRange::-webkit-outer-spin-button,
-        #maxRange::-webkit-inner-spin-button {
+        #answer::-webkit-outer-spin-button, #answer::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
         }
-        #answer[type=number], #minRange[type=number], #maxRange[type=number] {
+        #answer[type=number] {
             -moz-appearance: textfield;
         }
-        #upcoming-questions {
-            margin-top: 0;
+        .question {
+            white-space: pre;
+            letter-spacing: -5px;
         }
         .upcoming-question {
             opacity: 0.6;
@@ -110,19 +124,21 @@
         .upcoming-question:nth-child(3) {
             opacity: 0.2;
         }
-        .question {
-            white-space: pre;
-            letter-spacing: -1px; /* Reduce spacing between characters */
+        .history-row:nth-child(odd) {
+            background-color: #f4f4f4;
+        }
+        .history-row:nth-child(even) {
+            background-color: #e0e0e0;
+        }
+        .history-row {
+            padding: 5px;
+            text-align: center;
+            font-size: 16px;
         }
     </style>
 </head>
 <body>
     <div id="controls">
-        <label>Range:
-            <input type="number" id="minRange" placeholder="Min" value="2">
-            -
-            <input type="number" id="maxRange" placeholder="Max" value="9">
-        </label>
         <label>Time:
             <select id="timeSelect">
                 <option value="60">60s</option>
@@ -131,96 +147,98 @@
         </label>
         <label>
             <input type="checkbox" id="addition" checked>Addition
+            <input type="number" id="addMin1" value="2" placeholder="Min 1">
+            <input type="number" id="addMax1" value="9" placeholder="Max 1">
+            <input type="number" id="addMin2" value="2" placeholder="Min 2">
+            <input type="number" id="addMax2" value="9" placeholder="Max 2">
         </label>
         <label>
             <input type="checkbox" id="subtraction">Subtraction
+            <input type="number" id="subMin1" value="2" placeholder="Min 1">
+            <input type="number" id="subMax1" value="9" placeholder="Max 1">
+            <input type="number" id="subMin2" value="2" placeholder="Min 2">
+            <input type="number" id="subMax2" value="9" placeholder="Max 2">
         </label>
         <label>
             <input type="checkbox" id="multiplication" checked>Multiplication
+            <input type="number" id="mulMin1" value="2" placeholder="Min 1">
+            <input type="number" id="mulMax1" value="9" placeholder="Max 1">
+            <input type="number" id="mulMin2" value="2" placeholder="Min 2">
+            <input type="number" id="mulMax2" value="9" placeholder="Max 2">
         </label>
         <label>
             <input type="checkbox" id="division">Division
+            <input type="number" id="divMin1" value="2" placeholder="Min 1">
+            <input type="number" id="divMax1" value="9" placeholder="Max 1">
+            <input type="number" id="divMin2" value="2" placeholder="Min 2">
+            <input type="number" id="divMax2" value="9" placeholder="Max 2">
+        </label>
+        <label>
+            <input type="checkbox" id="squares">Squares
+            <input type="number" id="squaresMin" value="2" placeholder="Min">
+            <input type="number" id="squaresMax" value="9" placeholder="Max">
+        </label>
+        <label>
+            <input type="button" id="toggleSound" value="Sound: Off" onclick="toggleSound()">
         </label>
     </div>
     <div id="info">
-        <div id="score">Score: 0</div>
-        <div id="timer">Time: <span>60s</span></div>
-        <div id="cpm">CPM: 0</div>
-        <div id="cpm-history">CPM History:</div>
+        <div id="cpm-history"></div>
     </div>
+    <div id="progress-container">
+        <div id="progress-bar"></div>
+    </div>
+    <div id="cpm-display">CPM: 0</div>
     <div id="question-area">
         <input type="number" id="answer" onkeydown="restartOnEnter(event)" oninput="checkAnswer()">
         <div id="question" class="question"></div>
         <div id="upcoming-questions"></div>
     </div>
-
-    <audio id="click-sound" src="res/arcade.wav"></audio>
-
+    <audio id="click-sound" src="res/sound.wav"></audio>
     <script>
-        let correctAnswer;
-        let score = 0;
-        let total = 0;
-        let timer;
-        let timerStarted = false;
-        const upcomingQuestions = [];
-        const cpmHistory = [];
+        let correctAnswer, score = 0, total = 0, timer, timerStarted = false, soundEnabled = false;
+        const upcomingQuestions = [], cpmHistory = [];
 
         function getRandomInt(min, max) {
             return Math.floor(Math.random() * (max - min + 1)) + min;
         }
 
         function generateQuestion() {
-            const minRange = parseInt(document.getElementById('minRange').value) || 2;
-            const maxRange = parseInt(document.getElementById('maxRange').value) || 9;
-            const a = getRandomInt(minRange, maxRange);
-            const b = getRandomInt(minRange, maxRange);
             const operations = [];
             if (document.getElementById('addition').checked) operations.push('+');
             if (document.getElementById('subtraction').checked) operations.push('-');
             if (document.getElementById('multiplication').checked) operations.push('*');
             if (document.getElementById('division').checked) operations.push('/');
+            if (document.getElementById('squares').checked) operations.push('^2');
             const operation = operations[Math.floor(Math.random() * operations.length)];
+
+            const generateValues = (id1, id2) => [getRandomInt(parseInt(document.getElementById(id1).value) || 2, parseInt(document.getElementById(id2).value) || 9)];
+            const [a, b] = generateValues('addMin1', 'addMax1').concat(generateValues('addMin2', 'addMax2'));
+            
             switch (operation) {
-                case '+':
-                    return { question: `${a} + ${b}`, answer: a + b };
-                case '-':
-                    return { question: `${a} - ${b}`, answer: a - b };
-                case '*':
-                    return { question: `${a} * ${b}`, answer: a * b };
-                case '/':
-                    const numerator = a * b; // Ensure the numerator is a multiple of b
-                    return { question: `${numerator} / ${b}`, answer: numerator / b };
+                case '+': return { question: `${a} + ${b}`, answer: a + b };
+                case '-': return { question: `${a} - ${b}`, answer: a - b };
+                case '*': return { question: `${a} * ${b}`, answer: a * b };
+                case '/': return { question: `${a * b} / ${b}`, answer: a };
+                case '^2': return { question: `${a}^2`, answer: a * a };
             }
         }
 
         function updateUpcomingQuestions() {
-            const upcomingQuestionsDiv = document.getElementById('upcoming-questions');
-            upcomingQuestionsDiv.innerHTML = '';
-            for (let i = 1; i < upcomingQuestions.length; i++) {
-                const questionDiv = document.createElement('div');
-                questionDiv.className = 'upcoming-question question';
-                questionDiv.innerText = upcomingQuestions[i].question;
-                upcomingQuestionsDiv.appendChild(questionDiv);
-            }
+            document.getElementById('upcoming-questions').innerHTML = upcomingQuestions.slice(1).map(q => `<div class="upcoming-question question">${q.question}</div>`).join('');
         }
 
         function checkAnswer() {
-            const answer = parseInt(document.getElementById('answer').value);
-            if (answer === correctAnswer) {
-                playClickSound();
-                score++;
-                total++;
+            if (parseInt(document.getElementById('answer').value) === correctAnswer) {
+                if (soundEnabled) playClickSound();
+                score++; total++;
                 upcomingQuestions.shift();
-                const nextQuestion = generateQuestion();
-                upcomingQuestions.push(nextQuestion);
+                upcomingQuestions.push(generateQuestion());
                 correctAnswer = upcomingQuestions[0].answer;
                 document.getElementById('question').innerText = upcomingQuestions[0].question;
                 document.getElementById('answer').value = '';
                 updateUpcomingQuestions();
-                document.getElementById('score').innerText = `Score: ${score}`;
-                if (!timerStarted) {
-                    startTimer();
-                }
+                if (!timerStarted) startTimer();
             }
         }
 
@@ -230,43 +248,42 @@
             clickSound.play();
         }
 
+        function toggleSound() {
+            soundEnabled = !soundEnabled;
+            document.getElementById('toggleSound').value = soundEnabled ? 'Sound: On' : 'Sound: Off';
+        }
+
         function startTimer() {
             timerStarted = true;
-            score = 0;
-            total = 0;
+            score = 0; total = 0;
             const timeLimit = parseInt(document.getElementById('timeSelect').value);
-            document.getElementById('score').innerText = `Score: ${score}`;
-            document.getElementById('timer').innerHTML = `Time: <span>${timeLimit}s</span>`;
-            document.getElementById('cpm').innerText = `CPM: 0`;
+            document.getElementById('cpm-display').innerText = `CPM: 0`;
             document.getElementById('question-area').classList.add('started');
+            document.getElementById('progress-bar').style.width = '100%';
+
+            const interval = timeLimit * 1000, decrement = 100 / timeLimit;
             timer = setInterval(() => {
-                const currentTime = parseInt(document.querySelector('#timer span').innerText.replace('s', ''));
+                const currentTime = parseInt(document.querySelector('#progress-bar').style.width.replace('%', ''));
                 if (currentTime > 0) {
-                    document.querySelector('#timer span').innerText = `${currentTime - 1}s`;
-                    const cpm = (score / (timeLimit - currentTime)) * 60;
-                    document.getElementById('cpm').innerText = `CPM: ${cpm.toFixed(2)}`;
+                    document.getElementById('progress-bar').style.width = `${currentTime - decrement}%`;
+                    let cpm = Math.floor((score / (timeLimit - (currentTime / decrement))) * 60);
+                    document.getElementById('cpm-display').innerText = `CPM: ${isNaN(cpm) || !isFinite(cpm) ? 0 : cpm}`;
                 } else {
                     clearInterval(timer);
-                    const cpm = (score / timeLimit) * 60;
-                    cpmHistory.push(cpm.toFixed(2));
+                    const cpm = Math.floor((score / timeLimit) * 60);
+                    cpmHistory.push(isNaN(cpm) || !isFinite(cpm) ? 0 : cpm);
                     updateCpmHistory();
-                    setTimeout(() => {
-                        initializePractice();
-                    }, 500); // Pause for 0.5 seconds before restarting
+                    setTimeout(initializePractice, 500);
                 }
             }, 1000);
         }
 
         function updateCpmHistory() {
-            const cpmHistoryDiv = document.getElementById('cpm-history');
-            cpmHistoryDiv.innerHTML = 'CPM History:<br>' + cpmHistory.join('<br>');
+            document.getElementById('cpm-history').innerHTML = cpmHistory.map(cpm => `<div class="history-row">${cpm}</div>`).join('');
         }
 
         function restartOnEnter(event) {
-            if (event.key === "Enter") {
-                initializePractice();
-                document.getElementById('answer').focus();
-            }
+            if (event.key === "Enter") initializePractice();
         }
 
         function initializePractice() {
@@ -274,24 +291,16 @@
             timerStarted = false;
             document.getElementById('question-area').classList.remove('started');
             document.getElementById('answer').value = '';
-            document.getElementById('score').innerText = 'Score: 0';
-            document.getElementById('timer').innerHTML = `Time: <span>${document.getElementById('timeSelect').value}s</span>`;
-            document.getElementById('cpm').innerText = `CPM: 0`;
+            document.getElementById('cpm-display').innerText = `CPM: 0`;
             upcomingQuestions.length = 0;
-            for (let i = 0; i < 4; i++) {
-                const nextQuestion = generateQuestion();
-                upcomingQuestions.push(nextQuestion);
-            }
+            document.getElementById('progress-bar').style.width = '100%';
+            for (let i = 0; i < 4; i++) upcomingQuestions.push(generateQuestion());
             correctAnswer = upcomingQuestions[0].answer;
             document.getElementById('question').innerText = upcomingQuestions[0].question;
             updateUpcomingQuestions();
-            document.getElementById('answer').focus();
         }
 
-        document.addEventListener('DOMContentLoaded', (event) => {
-            initializePractice();
-            document.getElementById('answer').focus();
-        });
+        document.addEventListener('DOMContentLoaded', initializePractice);
     </script>
 </body>
 </html>
