--- a/arithmetic_practice/old/index_err2.html
+++ b/arithmetic_practice/old/index_err2.html
@@ -20,42 +20,45 @@
             position: absolute;
             top: 20px;
             left: 20px;
-            background: #fff;
             padding: 15px;
             border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             font-size: 16px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            align-items: center;
         }
         #controls label {
-            display: block;
-            margin-bottom: 10px;
+            display: flex;
+            align-items: center;
+            margin-right: 10px;
         }
-        #controls input, #controls select {
+        #controls input[type="number"], #controls input[type="button"] {
             width: 60px;
             padding: 5px;
-            margin-top: 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 14px;
-            display: inline-block;
         }
-        #controls input[type=checkbox], #controls input[type=button] {
+        #controls input[type=checkbox] {
             width: auto;
+            margin-right: 5px;
+        }
+        #controls input[type="button"] {
+            width: auto;
+            font-size: 20px;
         }
         #info {
             position: absolute;
             top: 20px;
             right: 20px;
             text-align: right;
-            background: #fff;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 200px;
             font-size: 16px;
         }
-        #info div {
-            margin-bottom: 10px;
+        #info .history-row {
+            padding: 5px;
+            text-align: center;
+            font-size: 16px;
         }
         #progress-container {
             position: absolute;
@@ -112,42 +115,26 @@
         }
         #answer::-webkit-outer-spin-button,
         #answer::-webkit-inner-spin-button,
-        #addMin1::-webkit-outer-spin-button,
-        #addMin1::-webkit-inner-spin-button,
-        #addMax1::-webkit-outer-spin-button,
-        #addMax1::-webkit-inner-spin-button,
-        #addMin2::-webkit-outer-spin-button,
-        #addMin2::-webkit-inner-spin-button,
-        #addMax2::-webkit-outer-spin-button,
-        #addMax2::-webkit-inner-spin-button,
-        #subMin1::-webkit-outer-spin-button,
-        #subMin1::-webkit-inner-spin-button,
-        #subMax1::-webkit-outer-spin-button,
-        #subMax1::-webkit-inner-spin-button,
-        #subMin2::-webkit-outer-spin-button,
-        #subMin2::-webkit-inner-spin-button,
-        #subMax2::-webkit-outer-spin-button,
-        #subMax2::-webkit-inner-spin-button,
-        #mulMin1::-webkit-outer-spin-button,
-        #mulMin1::-webkit-inner-spin-button,
-        #mulMax1::-webkit-outer-spin-button,
-        #mulMax1::-webkit-inner-spin-button,
-        #mulMin2::-webkit-outer-spin-button,
-        #mulMin2::-webkit-inner-spin-button,
-        #mulMax2::-webkit-outer-spin-button,
-        #mulMax2::-webkit-inner-spin-button,
-        #divMin1::-webkit-outer-spin-button,
-        #divMin1::-webkit-inner-spin-button,
-        #divMax1::-webkit-outer-spin-button,
-        #divMax1::-webkit-inner-spin-button,
-        #divMin2::-webkit-outer-spin-button,
-        #divMin2::-webkit-inner-spin-button,
-        #divMax2::-webkit-outer-spin-button,
-        #divMax2::-webkit-inner-spin-button {
+        #addMin::-webkit-outer-spin-button,
+        #addMin::-webkit-inner-spin-button,
+        #addMax::-webkit-outer-spin-button,
+        #addMax::-webkit-inner-spin-button,
+        #subMin::-webkit-outer-spin-button,
+        #subMin::-webkit-inner-spin-button,
+        #subMax::-webkit-outer-spin-button,
+        #subMax::-webkit-inner-spin-button,
+        #mulMin::-webkit-outer-spin-button,
+        #mulMin::-webkit-inner-spin-button,
+        #mulMax::-webkit-outer-spin-button,
+        #mulMax::-webkit-inner-spin-button,
+        #divMin::-webkit-outer-spin-button,
+        #divMin::-webkit-inner-spin-button,
+        #divMax::-webkit-outer-spin-button,
+        #divMax::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
         }
-        #answer[type=number], #addMin1[type=number], #addMax1[type=number], #addMin2[type=number], #addMax2[type=number], #subMin1[type=number], #subMax1[type=number], #subMin2[type=number], #subMax2[type=number], #mulMin1[type=number], #mulMax1[type=number], #mulMin2[type=number], #mulMax2[type=number], #divMin1[type=number], #divMax1[type=number], #divMin2[type=number], #divMax2[type=number] {
+        #answer[type=number], #addMin[type=number], #addMax[type=number], #subMin[type=number], #subMax[type=number], #mulMin[type=number], #mulMax[type=number], #divMin[type=number], #divMax[type=number] {
             -moz-appearance: textfield;
         }
         #upcoming-questions {
@@ -166,7 +153,7 @@
         }
         .question {
             white-space: pre;
-            letter-spacing: -5px; /* Reduce spacing between characters */
+            letter-spacing: -1px; /* Reduce spacing between characters */
         }
         .history-row:nth-child(odd) {
             background-color: #f4f4f4;
@@ -174,57 +161,16 @@
         .history-row:nth-child(even) {
             background-color: #e0e0e0;
         }
-        .history-row {
-            padding: 5px;
-            text-align: center;
-            font-size: 16px;
-        }
     </style>
 </head>
 <body>
     <div id="controls">
-        <label>Time:
-            <select id="timeSelect">
-                <option value="60">60s</option>
-                <option value="120">120s</option>
-            </select>
-        </label>
-        <label>
-            <input type="checkbox" id="addition" checked>Addition
-            <input type="number" id="addMin1" value="2" placeholder="Min 1">
-            <input type="number" id="addMax1" value="9" placeholder="Max 1">
-            <input type="number" id="addMin2" value="2" placeholder="Min 2">
-            <input type="number" id="addMax2" value="9" placeholder="Max 2">
-        </label>
-        <label>
-            <input type="checkbox" id="subtraction">Subtraction
-            <input type="number" id="subMin1" value="2" placeholder="Min 1">
-            <input type="number" id="subMax1" value="9" placeholder="Max 1">
-            <input type="number" id="subMin2" value="2" placeholder="Min 2">
-            <input type="number" id="subMax2" value="9" placeholder="Max 2">
-        </label>
-        <label>
-            <input type="checkbox" id="multiplication" checked>Multiplication
-            <input type="number" id="mulMin1" value="2" placeholder="Min 1">
-            <input type="number" id="mulMax1" value="9" placeholder="Max 1">
-            <input type="number" id="mulMin2" value="2" placeholder="Min 2">
-            <input type="number" id="mulMax2" value="9" placeholder="Max 2">
-        </label>
-        <label>
-            <input type="checkbox" id="division">Division
-            <input type="number" id="divMin1" value="2" placeholder="Min 1">
-            <input type="number" id="divMax1" value="9" placeholder="Max 1">
-            <input type="number" id="divMin2" value="2" placeholder="Min 2">
-            <input type="number" id="divMax2" value="9" placeholder="Max 2">
-        </label>
-        <label>
-            <input type="checkbox" id="squares">Squares
-            <input type="number" id="squaresMin" value="2" placeholder="Min">
-            <input type="number" id="squaresMax" value="9" placeholder="Max">
-        </label>
-        <label>
-            <input type="button" id="toggleSound" value="Sound: Off" onclick="toggleSound()">
-        </label>
+        <label>* <input type="checkbox" id="multiplication" checked></label>
+        <label>/ <input type="checkbox" id="division"></label>
+        <label>- <input type="checkbox" id="subtraction"></label>
+        <label>+ <input type="checkbox" id="addition" checked></label>
+        <label><input type="number" id="timeSelect" value="60">s</label>
+        <label><input type="button" id="toggleSound" value="🔇" onclick="toggleSound()"></label>
     </div>
     <div id="info">
         <div id="cpm-history"></div>
@@ -261,48 +207,34 @@
             if (document.getElementById('subtraction').checked) operations.push('-');
             if (document.getElementById('multiplication').checked) operations.push('*');
             if (document.getElementById('division').checked) operations.push('/');
-            if (document.getElementById('squares').checked) operations.push('^2');
             const operation = operations[Math.floor(Math.random() * operations.length)];
 
             switch (operation) {
                 case '+':
-                    const addMin1 = parseInt(document.getElementById('addMin1').value) || 2;
-                    const addMax1 = parseInt(document.getElementById('addMax1').value) || 9;
-                    const addMin2 = parseInt(document.getElementById('addMin2').value) || 2;
-                    const addMax2 = parseInt(document.getElementById('addMax2').value) || 9;
-                    const aAdd = getRandomInt(addMin1, addMax1);
-                    const bAdd = getRandomInt(addMin2, addMax2);
+                    const addMin = parseInt(document.getElementById('addMin').value) || 2;
+                    const addMax = parseInt(document.getElementById('addMax').value) || 9;
+                    const aAdd = getRandomInt(addMin, addMax);
+                    const bAdd = getRandomInt(addMin, addMax);
                     return { question: `${aAdd} + ${bAdd}`, answer: aAdd + bAdd };
                 case '-':
-                    const subMin1 = parseInt(document.getElementById('subMin1').value) || 2;
-                    const subMax1 = parseInt(document.getElementById('subMax1').value) || 9;
-                    const subMin2 = parseInt(document.getElementById('subMin2').value) || 2;
-                    const subMax2 = parseInt(document.getElementById('subMax2').value) || 9;
-                    const aSub = getRandomInt(subMin1, subMax1);
-                    const bSub = getRandomInt(subMin2, subMax2);
+                    const subMin = parseInt(document.getElementById('subMin').value) || 2;
+                    const subMax = parseInt(document.getElementById('subMax').value) || 9;
+                    const aSub = getRandomInt(subMin, subMax);
+                    const bSub = getRandomInt(subMin, subMax);
                     return { question: `${aSub} - ${bSub}`, answer: aSub - bSub };
                 case '*':
-                    const mulMin1 = parseInt(document.getElementById('mulMin1').value) || 2;
-                    const mulMax1 = parseInt(document.getElementById('mulMax1').value) || 9;
-                    const mulMin2 = parseInt(document.getElementById('mulMin2').value) || 2;
-                    const mulMax2 = parseInt(document.getElementById('mulMax2').value) || 9;
-                    const aMul = getRandomInt(mulMin1, mulMax1);
-                    const bMul = getRandomInt(mulMin2, mulMax2);
+                    const mulMin = parseInt(document.getElementById('mulMin').value) || 2;
+                    const mulMax = parseInt(document.getElementById('mulMax').value) || 9;
+                    const aMul = getRandomInt(mulMin, mulMax);
+                    const bMul = getRandomInt(mulMin, mulMax);
                     return { question: `${aMul} * ${bMul}`, answer: aMul * bMul };
                 case '/':
-                    const divMin1 = parseInt(document.getElementById('divMin1').value) || 2;
-                    const divMax1 = parseInt(document.getElementById('divMax1').value) || 9;
-                    const divMin2 = parseInt(document.getElementById('divMin2').value) || 2;
-                    const divMax2 = parseInt(document.getElementById('divMax2').value) || 9;
-                    const aDiv = getRandomInt(divMin1, divMax1);
-                    const bDiv = getRandomInt(divMin2, divMax2);
+                    const divMin = parseInt(document.getElementById('divMin').value) || 2;
+                    const divMax = parseInt(document.getElementById('divMax').value) || 9;
+                    const aDiv = getRandomInt(divMin, divMax);
+                    const bDiv = getRandomInt(divMin, divMax);
                     const numerator = aDiv * bDiv; // Ensure the numerator is a multiple of bDiv
                     return { question: `${numerator} / ${bDiv}`, answer: numerator / bDiv };
-                case '^2':
-                    const squaresMin = parseInt(document.getElementById('squaresMin').value) || 2;
-                    const squaresMax = parseInt(document.getElementById('squaresMax').value) || 9;
-                    const aSquare = getRandomInt(squaresMin, squaresMax);
-                    return { question: `${aSquare}^2`, answer: aSquare * aSquare };
             }
         }
 
@@ -346,7 +278,7 @@
 
         function toggleSound() {
             soundEnabled = !soundEnabled;
-            document.getElementById('toggleSound').value = soundEnabled ? 'Sound: On' : 'Sound: Off';
+            document.getElementById('toggleSound').value = soundEnabled ? '🔊' : '🔇';
         }
 
         function startTimer() {
